--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ python = "^3.7"
 httpx = "^0.13.3"
 
 [tool.poetry.dev-dependencies]
+ipython = "^7.15.0"
+ipdb = "^0.13.2"
 
 [build-system]
 requires = ["poetry>=0.12"]
